# complaint-bot

./: .env  .env.example  .gitignore  CHANGELOG.md  Changelog  Dockerfile  README.md  add_admin.py  add_myself_admin.py  add_superadmin.py  apply_update_v0.8.0.sh  apply_v0.8.1_full.sh  citybot.sqlite3  complaints.sqlite3  create_git_script.sh  docker-compose.yml  export_complaints.csv  generated_at  generator  get_admins.py  github_release_v0.8.2.json  github_v082.json  hotfix_v0.8.2.sh  main.py  nginx.conf  project_name  project_root  push_to_github.sh  pyproject.toml  run_bot.py  run_bot_console.sh  run_dev.sh  start_app.sh  start_bot.sh  stop_app.sh  stop_bot.sh  update_1_categories.py  update_2_handlers.py  update_3_fixes.py  update_4_webapp_auth.py  (+3 more)
backend/: main.py
backend/api/v1/: auth.py  complaints.py  employees.py  photos.py  users.py  websocket.py
backend/core/: config.py  dependencies.py  security.py
backend/db/: crud.py  database.py  models.py
bot/: bot.py
bot/handlers/: admin.py  complaint.py  complaint_new.py  start.py
bot/utils/: categories.py  status.py
complaint-bot.git/: config  packed-refs
complaint-bot.git/objects/pack/: pack-4a1bcd17413eca64a84cefcbc350e926e8a50562.idx  pack-4a1bcd17413eca64a84cefcbc350e926e8a50562.pack
config/: categories.json
data/: complaints.sqlite3
frontend/residents/: index.html
frontend/services/: index.html
handlers/: __init__.py  admin.py  admin_panel.py  complaint_wizard.py  feedback_wizard.py  help_handler.py  start.py  superadmin_panel.py
keyboards/: admin_panel.py  inline.py  reply.py
middlewares/: access_control.py  accesscontrol.py  env_check.py
migrations/: update_db.py
services/: db.py  env.py
tests/: test_db.py
utils/: constants.py  db.py  dto.py  export.py  logger.py  texts.py  validators.py
