[tool.poetry]
name = "city-issues-bot"
version = "0.7.0"
description = "Городской помощник - Telegram бот + Web Apps"
authors = ["Developer"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
APScheduler = "^3.10.4"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
python-multipart = "^0.0.12"
websockets = "^13.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

